--- a/stopwatchapp.html
+++ b/stopwatchapp.html
@@ -4,7 +4,9 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Responsive Stopwatch App</title>
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="timerstyles.css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+        integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     </head>
 
     <body>
@@ -17,11 +19,24 @@
                 <button id="lapBtn">Lap</button>
             </div>
             <div class="laps">
-                <h2>Lap Times</h2>
-                <ul id="lapList"></ul>
+
+                <!-- <h2>Lap Times</h2>
+                <ul id="lapList"></ul> -->
+                <table class="table-borderless table" id="lapList">
+                    <thead>
+                        <tr>
+                            <th>Lap no.</th>
+                            <th>Lap Time</th>
+                            <th>Reached at</th>
+                        </tr>
+                    </thead>
+                    <tbody></tbody>
+
+                </table>
+
                 <h3>Best Lap Time: <span id="bestLap">N/A</span></h3>
             </div>
         </div>
-        <script src="timefunctions.js"></script>
+        <script src="timerfunctions.js"></script>
     </body>
 </html>
